fdo#64528 macab URL is sdbc:address:macab, not sdbc:address:macab:*

Change-Id: I1e5721815c961e14484f78f449910908ed48aeb1